--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdkVersion 31
 
     defaultConfig {
-        applicationId "io.baolong24.statuslyricext"
+        applicationId "statusbar.finder"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 4
