--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,6 +23,6 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Create baseline with Gradle
-      run: ./gradlew build
+      run: ./gradlew updateLintBaseline
     - name: Build with Gradle
       run: ./gradlew build
