--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,9 @@ android {
             excludes += ['META-INF/DEPENDENCIES', 'META-INF/NOTICE', 'META-INF/LICENSE', 'META-INF/LICENSE.txt', 'META-INF/NOTICE.txt', 'META-INF/LICENSE.md', 'META-INF/LICENSE-notice.md']
         }
     }
-
+    lint {
+        baseline = file("lint-baseline.xml")
+    }
     namespace 'statusbar.finder'
 }
 
