--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,7 +22,14 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Create baseline with Gradle
-      run: ./gradlew updateLintBaseline
+
     - name: Build with Gradle
-      run: ./gradlew build
+      run: |
+        ./gradlew assemble
+        ./gradlew bundleRelease
+
+    - name: Upload Debug APK
+      users: actions/upload-artifact@v3
+      with:
+        name: Debug APK
+        path: ./app/build/outputs/apk/debug
