--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -32,5 +32,5 @@ jobs:
     - name: Upload Debug APK
       uses: actions/upload-artifact@v3
       with:
-        name: Debug APK
+        name: debug
         path: ./app/build/outputs/apk/debug
