--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ android.suppressUnsupportedCompileSdk=34
 android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
+org.gradle.unsafe.configuration-cache=true
