--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 34
-
     defaultConfig {
+        compileSdk 34
+
         applicationId "statusbar.finder"
         minSdkVersion 26
         targetSdkVersion 34
-        versionCode 4
+        versionCode 5
         versionName "1.0.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
