--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,7 +25,6 @@ jobs:
 
     - name: Build with Gradle
       run: |
-        ./gradlew updateLintBaseline
         ./gradlew assemble
         ./gradlew bundleRelease
 
@@ -33,4 +32,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: debug
-        path: ./app/build/outputs/apk/debug
+        path: ./app/build/outputs/apk/debug/app-debug.apk
