修复由于无法获取专辑导致的NPE

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -34,6 +34,7 @@ jobs:
 
     - name: Build with Gradle
       run: |
+        ./gradlew updateLintBaseline
         ./gradlew assemble
         ./gradlew bundleRelease
 
