--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation group: 'com.github.houbb', name: 'opencc4j', version: '1.8.1'
     implementation group: 'io.github.kju2.languagedetector', name: 'language-detector', version: '1.0.5'
-    implementation 'com.github.xiaowine:Lyric-Getter-Api:V6-SNAPSHOT'
+    implementation 'com.github.xiaowine:Lyric-Getter-Api:6.0.0'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
 }
 repositories {
