--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,10 +9,8 @@ android {
         applicationId "statusbar.finder"
         minSdkVersion 26
         targetSdkVersion 34
-        versionCode 7
-        versionName "1.0.7"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        versionCode 8
+        versionName "1.0.8"
     }
 
     buildTypes {
@@ -35,7 +33,6 @@ android {
         baseline = file("lint-baseline.xml")
     }
     namespace 'statusbar.finder'
-    testBuildType "release"
 }
 
 dependencies {
@@ -43,16 +40,15 @@ dependencies {
     implementation "com.android.support:support-compat:28.0.0"
     implementation 'androidx.preference:preference:1.2.1'
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.preference:preference-ktx:1.2.1'
-    implementation 'com.google.android.material:material:1.10.0'
+    implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation group: 'com.github.houbb', name: 'opencc4j', version: '1.8.1'
     implementation group: 'io.github.kju2.languagedetector', name: 'language-detector', version: '1.0.5'
     implementation 'com.github.xiaowine:Lyric-Getter-Api:6.0.0'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'com.andree-surya:moji4j:1.0.0'
 }
 repositories {
     mavenCentral()
