--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+                android:name="xposedmodule"
+                android:value="true"/>
+        <meta-data
+                android:name="xposeddescription"
+                android:value="Push lyrics to Lyrics Getter from the Internet." />
+        <meta-data
+                android:name="xposedminversion"
+                android:value="54"/>
+        <meta-data
+                android:name="xposedscope"
+                android:resource="@array/xposed_scope" />
     </application>
 
 </manifest>
