--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
@@ -21,8 +22,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_20
+        targetCompatibility JavaVersion.VERSION_20
     }
     packagingOptions {
         resources {
@@ -33,12 +34,15 @@ android {
         baseline = file("lint-baseline.xml")
     }
     namespace 'statusbar.finder'
+    kotlinOptions {
+        jvmTarget = '20'
+    }
 }
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation "com.android.support:support-compat:28.0.0"
-    implementation 'androidx.preference:preference:1.2.1'
+    implementation 'androidx.preference:preference-ktx:1.2.1'
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.preference:preference-ktx:1.2.1'
@@ -49,6 +53,10 @@ dependencies {
     implementation 'com.github.xiaowine:Lyric-Getter-Api:6.0.0'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'com.andree-surya:moji4j:1.0.0'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    compileOnly 'de.robv.android.xposed:api:82'
+    implementation "com.github.kyuubiran:EzXHelper:2.0.8"
+    implementation 'com.github.xiaowine:XKT:1.0.12'
 }
 repositories {
     mavenCentral()
