--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,13 +14,6 @@ android {
         versionName "1.0.8"
     }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.debug
-        }
-    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_20
         targetCompatibility JavaVersion.VERSION_20
@@ -29,9 +22,6 @@ android {
         resources {
             excludes += ['META-INF/DEPENDENCIES', 'META-INF/NOTICE', 'META-INF/LICENSE', 'META-INF/LICENSE.txt', 'META-INF/NOTICE.txt', 'META-INF/LICENSE.md', 'META-INF/LICENSE-notice.md']
         }
-    }
-    lint {
-        baseline = file("lint-baseline.xml")
     }
     namespace 'statusbar.finder'
 }
@@ -45,6 +35,7 @@ dependencies {
     implementation 'androidx.preference:preference-ktx:1.2.1'
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
     implementation group: 'com.github.houbb', name: 'opencc4j', version: '1.8.1'
     implementation group: 'io.github.kju2.languagedetector', name: 'language-detector', version: '1.0.5'
     implementation 'com.github.xiaowine:Lyric-Getter-Api:6.0.0'
@@ -54,6 +45,7 @@ dependencies {
     compileOnly 'de.robv.android.xposed:api:82'
     implementation "com.github.kyuubiran:EzXHelper:2.0.8"
     implementation 'com.github.xiaowine:XKT:1.0.12'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
 }
 repositories {
     mavenCentral()
